--- a/apiservice/internal/conf/application.example.yml
+++ b/apiservice/internal/conf/application.example.yml
@@ -2,7 +2,7 @@ postgresql:
   host: 127.0.0.1
   port: 5432
   username: postgres
-  database: 
+  database: nagato
   password: root
   timezone: Asia/Shanghai
 
@@ -14,23 +14,19 @@ redis:
   host: 127.0.0.1
   port: 6379
 
-elasticsearch:
-  username: elastic
-  password: ADR*piFezssmbUhhN8*S
-  cert: http_ca.crt
-  host: 127.0.0.1
-  port: 9200
-
 rabbitmq:
   username: harukaze
   password: 123456
   host: 127.0.0.1
   port: 5672
 
-filesystem:
-  storedir: /tmp/objects/
-  tempdir: /tmp/temp/
-
 server:
   host: 127.0.0.1
-  port: 8100
+  port: 10000
+
+services: 
+  - nagato.search
+
+etcd:
+  host: 127.0.0.1
+  port: 2379
